<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">一团</string>
    <string name="setting">设定</string>
    <string name="update">刷新</string>
    <string name="about">关于</string>
    <string name="siteurl">http://www.laihj.net/sites.xml</string>
    <string name="getting">正在获取 </string>
    <string name="gettingend"> ....</string>
    <string name="getwebset">正在获取团购网站列表</string>
    <string name="nonewsite">没有获得新的团购网站信息</string>
    <string name="newsiteb">获得了</string>
    <string name="newsitee">枚新的团购网站信息</string>
    <string name="select_location">关注城市</string>
    <string name="please_select_location">请选择关注的城市</string>
    <string name="title_update">开启定时更新</string>
    <string name="update_time">定时更新时间</string>
    <string name="select_update_time">设置定时更新时间</string>
    <string name="update_title">更新</string>
    <string name="location_title">地点</string>
    <string name="location_default">beijing</string>
    <string name="time_default">8</string>
    <string name="noti_title">一团团购</string>
    <string name="noti_begin">一团为您获取了</string>
    <string name="noti_end">个最新团购信息</string>
    <string name="clearall">清空并重新获取数据</string>
</resources>
